# Feynman

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  architecture.md  calculations_used.md  copy_dags.sh  environment.yml  feynqft.cc  inket0_bell.sv  job.yaml  performance.md  requirements.txt  selecting_sources.md  simulator.cc  simulator_qft.cpp  storage.yaml  sv_batch_mpi.x  sv_mpi.x  sv_mpi_scheduler.x  sv_prefetcher_mpi.x  sv_prefetcher_subset_mpi.x  sv_scheduler_mpi.x  sv_scheduler_scheduler.x  tests.py  thoughts_checkpointing.md  thoughts_monte_carlo.md  tsan.supp
airflow-dags/: feynman_dag.py
apps/: bitstr.cc  bitstr.cpp  cloud_concat_batches.cpp  cloud_split_batches.cpp  cloud_task.cpp  sv.cc  sv_batch.cc  sv_batch.cpp  sv_embedded.cc  sv_prefetcher.cc  sv_prefetcher.cpp  sv_scheduler.cc  sv_scheduler.cpp
bitstring_set/: bitstrings.bs
circuits/: ghz_generator.py  increment_generator.py  qft_generator.py  qrc_supremacy_generator.py  qrng_generator.py  quantum_walk_generator.py
data/fixtures/: bell.qasm  bell_qiskit.qasm  ccztest.qasm  hexstring_overflow.hs  hexstring_size2.hs  ket0.hsv  ket1_size1.hsv  ket_i.hsv  pos4_coin_super.hsv  rx_ry.qasm  small.qasm
docs/: cloud.md  experiments.md  file_formats.md  paper_experiments.md  scripts.md
generators/: generate_bulk.py
generators/circuits/: aa_iter_generator.py  ghz_generator.py  increment_generator.py  qaoa_maxcut_generator.py  qft_generator.py  qrng_generator.py  quantum_walk_generator.py
generators/hexstrings/: hexstring_set_generator.py
generators/statevectors/: statevector_generator.py
hexstring_sets/: hexstring_set_generator.py
pauli-comparison/: Manifest.toml  Project.toml  README.md  run_pauli_smoke.jl  test.jl
scripts/: benchmark_cloud_pod_sweep.sh  build_and_import_cloud_images.sh  copy_dags.sh  merge_sv_prefetcher_summaries.py  plot_cloud_benchmark.py  plot_qaoa_pruning_sweep.py  plot_sv_prefetcher_cases.py  plot_sv_prefetcher_sweep.py  prepare_airflow_local.sh  regenerate_all_plots.py  render_cloud_benchmark_conf.py  run_pipeline.py  run_qaoa_pruning_sweep.py  run_sv_prefetcher_sweep.py  save_output.sh  summarize_airflow_task_timing.py  summarize_cloud_task_logs.py
scripts/experiments/: aa_n3_it3_mark1_checkpoint_ablation.json  aa_n4_it3_mark5_checkpoint_ablation.json  qaoa_n4_p1_qiskit_validation.json  qaoa_pruning_sweep_cycle_n8_p2.json  qaoa_pruning_sweep_weighted_n8_p2.json  qaoa_weighted_n8_p2_qiskit_validation.json  qft_n16_feynman_low_high_bulk.json  qft_n24_feynman_low_high_bulk.json  qft_n24_feynman_low_high_demo.json  qft_n32_feynman_low_high_demo.json  qft_n32_feynman_low_high_demo_wide.json  qft_n8_batch_sweep.json  qft_n8_feynman_low_extremehigh_demo.json  qft_n8_feynman_low_high_demo_less_extreme.json  qft_n8_k2_checkpoint_ablation.json  qft_two_freq_nqubits_demo.json  qwalk_n16_it16_checkpoint_ablation.json
scripts/experiments/cloud/: qft_n8_k2.json  qft_pod_sweep.json  qwalk_n128_it16_scale.json  qwalk_pod_sweep.json
scripts/experiments/exploratory/: README.md
scripts/experiments/exploratory/perf/: aa_checkpoint_ablation.json  aa_n4_it3_mark5_checkpoint_ablation.json  qft_batch_sweep.json  qft_checkpoint_ablation.json  qft_n8_k2_checkpoint_ablation.json  qwalk_checkpoint_ablation.json  qwalk_iteration_checkpoint_sources.json  qwalk_n16_it16_checkpoint_ablation.json  qwalk_n16_iteration_checkpoint_sources.json  qwalk_quimb_qubit_sweep.json
scripts/experiments/exploratory/validation/: qaoa_cycle_n8_p2_qiskit_validation.json  qft_demo.json  qft_demo_extreme.json  qft_n24_feynman_low_high_bulk.json  qft_n8_k4_qiskit_validation.json  qft_qiskit_validation.json  qwalk_quimb_smoke.json
scripts/experiments/paper/: README.md
scripts/experiments/paper/perf/: aa_checkpoint_ablation.json  aa_n3_it3_mark1_checkpoint_ablation.json  qaoa_pruning_sweep_cycle_n8_p2.json  qwalk_iteration_checkpoint_sources.json  qwalk_quimb_qubit_sweep.json
scripts/experiments/paper/validation/: qaoa_cycle_n8_p2_qiskit_validation.json  qft_demo.json  qft_two_freq_nqubits_demo_norm.json
scripts/experiments/perf/: aa_n3_it3_mark1_checkpoint_ablation.json  aa_n4_it3_mark5_checkpoint_ablation.json  qaoa_pruning_sweep_cycle_n8_p2.json  qft_n8_batch_sweep.json  qft_n8_k2_checkpoint_ablation.json  qwalk_n16_it16_checkpoint_ablation.json
scripts/experiments/validation/: qaoa_cycle_n8_p2_qiskit_validation.json  qft_n16_feynman_low_high_bulk.json  qft_n8_k4_qiskit_validation.json  qft_two_freq_nqubits_demo_norm.json
scripts/qaoa_pruning_sweep/: __init__.py  cli.py  main.py  plotting.py  project.py  schema.py
scripts/sv_prefetcher_sweep/: __init__.py  cli.py  main.py  project.py  schema.py
scripts/sweeplib/: __init__.py  materialize.py  plot_style.py  plotting.py  provenance.py  sweep.py  utils.py
scripts/tensor_comparison/: __init__.py  quimb_transpile.py  qwalk_quimb.py  qwalk_quimb_gate_contract_sweep.py  qwalk_quimb_sweep.py
scripts/validation/: qaoa_qiskit_validation.py  qft_demo.py  qft_feynman_demo.py  qft_vs_qiskit.py
src/: circuit.h  circuit_qft.h  final_reduction.h  gate_types.h  iofiles.h  mpiScheduler.h  parallel_for.h  parsed_circuit.h  simulator.h  typedef.h  utils.h
statevectors/: inket0_bell.sv  ket0.sv  n2_ket0.sv  statevector_generator.py
